--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -23,4 +23,5 @@
 @import './Nav/Nav.scss';
 @import './TopChampions/TopChampions.scss';
 @import './Champions/Champion.scss';
+@import './ChampionsStats/championStat.scss';
 @import './Filter/Filter.scss';
