--- a/client/src/assets/styles/_typo.scss
+++ b/client/src/assets/styles/_typo.scss
@@ -12,12 +12,12 @@
 .h2 {
   font-family: $font-family-header;
   font-size: 18px;
-  padding: 0 3rem;
+  padding: 0 1.5rem;
   line-height: 1.4;
   font-weight: 500;
   @include media-breakpoint-up(sm) {
     font-size: 26px;
-    padding: 0;
+    // padding: 0;
   }
 }
 
