--- a/client/src/assets/styles/mixins/_font.scss
+++ b/client/src/assets/styles/mixins/_font.scss
@@ -3,7 +3,8 @@
     font-family: $ft_alias;
 		src: url( $path+$ft_name+'.eot');
 		src: url( $path+$ft_name+'.eot?#iefix') format('embedded-opentype'),
-		url( $path+$ft_name+'.woff') format('woff'),
+    url( $path+$ft_name+'.woff2') format('woff2'),
+    url( $path+$ft_name+'.woff') format('woff'),
 		url( $path+$ft_name+'.ttf') format('truetype');
 		// url( $path+$ft_name+'.svg#'+ft_alias) format('svg');
 		font-weight: $ft_weight;
