change local fonts by google fonts to test performance

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -1,3 +1,6 @@
+// import Google fonts
+@import url('https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500');
+
 // Variables
 //
 $enable-grid-classes:       true !default;
