--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -2,7 +2,7 @@
 @import './assets/styles/mixins/breakpoints.scss';
 @import './assets/styles/mixins/grid-framework.scss';
 @import './assets/styles/mixins/grid.scss';
-@import './assets/styles/mixins/font.scss';
+// @import './assets/styles/mixins/font.scss';
 @import './assets/styles/mixins/transition.scss';
 @import './assets/styles/mixins/buttons.scss';
 @import './assets/styles/mixins/z-index.scss';
