--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,51 +1,14 @@
-@font-face {
-  font-family: "Exo";
-  src: url("../assets/fonts/Exo/Exo-Regular.eot");
-  src: url("../assets/fonts/Exo/Exo-Regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Exo/Exo-Regular.woff2") format("woff2"), url("../assets/fonts/Exo/Exo-Regular.woff") format("woff"), url("../assets/fonts/Exo/Exo-Regular.ttf") format("truetype");
-  font-weight: 500;
-  font-style: "normal";
-  font-display: swap; }
-
-@font-face {
-  font-family: "Exo";
-  src: url("../assets/fonts/Exo/Exo-BoldItalic.eot");
-  src: url("../assets/fonts/Exo/Exo-BoldItalic.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Exo/Exo-BoldItalic.woff2") format("woff2"), url("../assets/fonts/Exo/Exo-BoldItalic.woff") format("woff"), url("../assets/fonts/Exo/Exo-BoldItalic.ttf") format("truetype");
-  font-weight: 700;
-  font-style: "italic";
-  font-display: swap; }
-
-@font-face {
-  font-family: "Exo";
-  src: url("../assets/fonts/Exo/Exo-Bold.eot");
-  src: url("../assets/fonts/Exo/Exo-Bold.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Exo/Exo-Bold.woff2") format("woff2"), url("../assets/fonts/Exo/Exo-Bold.woff") format("woff"), url("../assets/fonts/Exo/Exo-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: "normal";
-  font-display: swap; }
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../assets/fonts/Roboto/Roboto-Regular.eot");
-  src: url("../assets/fonts/Roboto/Roboto-Regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Roboto/Roboto-Regular.woff2") format("woff2"), url("../assets/fonts/Roboto/Roboto-Regular.woff") format("woff"), url("../assets/fonts/Roboto/Roboto-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: "normal";
-  font-display: swap; }
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../assets/fonts/Roboto/Roboto-Bold.eot");
-  src: url("../assets/fonts/Roboto/Roboto-Bold.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Roboto/Roboto-Bold.woff2") format("woff2"), url("../assets/fonts/Roboto/Roboto-Bold.woff") format("woff"), url("../assets/fonts/Roboto/Roboto-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: "normal";
-  font-display: swap; }
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../assets/fonts/Roboto/Roboto-Light.eot");
-  src: url("../assets/fonts/Roboto/Roboto-Light.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/Roboto/Roboto-Light.woff2") format("woff2"), url("../assets/fonts/Roboto/Roboto-Light.woff") format("woff"), url("../assets/fonts/Roboto/Roboto-Light.ttf") format("truetype");
-  font-weight: 300;
-  font-style: "normal";
-  font-display: swap; }
-
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Exo:500,700,700i|Roboto:300,400,500");
 *,
 *::before,
 *::after {
