--- a/client/src/components/Champions/_Champion.scss
+++ b/client/src/components/Champions/_Champion.scss
@@ -12,9 +12,9 @@ $badge-height-desktop: 31px;
   text-align: center;
   transition: $transition-base;
 
-  &:hover {
-    transform: scale(1.05);
-  }
+  // &:hover {
+  //   transform: scale(1.05);
+  // }
 
   // IMAGES
   .card-image {
