--- a/client/src/components/BestSynergies/_ChampionsMosaic.scss
+++ b/client/src/components/BestSynergies/_ChampionsMosaic.scss
@@ -28,46 +28,41 @@
 
     }
     &.selected {
-      img { opacity: 1; }
+      img {
+        opacity: 1;
+        border: 2px solid $turquoise;
+        cursor: default;
+      }
+      span {
+        cursor: default;
+      }
     }
     &:not(.selected) {
-      // &:hover {
-      //   background-color: rgba($pop-purple, 0.5);
-      //   border-radius: 50%;
-      //   span {
-      //     opacity: 1;
-      //   }
-      //   img:not(.selected) {
-      //     opacity: 0.1;
-      //   }
-      // }
-
-        &::after {
-          content: '';
-        	position: absolute;
-        	z-index: 0;
-        	transition: all 0.3s;
-        	width: 100%;
-        	height: 0;
-        	top: 50%;
-        	left: 50%;
-        	background: $turquoise;
-
-        	opacity: 0;
-        	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+      &::after {
+        content: '';
+      	position: absolute;
+      	z-index: 0;
+      	transition: all 0.3s;
+      	width: 100%;
+      	height: 0;
+      	top: 50%;
+      	left: 50%;
+      	background: $turquoise;
+      	opacity: 0;
+      	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+      }
+      &:hover,
+      &:active {
+        span {
+          opacity: 1;
+          color: $white;
+          z-index: 1;
         }
-        &:hover,
-        &:active {
-          span {
-            opacity: 1;
-            color: $white;
-            z-index: 1;
-          }
-        }
-        &:hover::after {
-        	height:100%;
-        	opacity: 1;
-        }
+      }
+      &:hover::after {
+      	height:100%;
+      	opacity: 1;
+      }
 
     }
   }
