recuperation du back maj

--- a/client/src/assets/styles/elements/_select.scss
+++ b/client/src/assets/styles/elements/_select.scss
@@ -24,6 +24,9 @@
       padding: $select-padding-y 2.5rem $select-padding-y $select-padding-x;
       font-size: $select-font-size;
     }
+    &:focus {
+      background-color: $dark-purple;
+    }
   }
   // Add arrow icons
   &::after {
