--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1275,6 +1275,8 @@ input[type="button"].btn-block {
       .select-wrapper select {
         padding: 0.2rem 2.5rem 0.2rem 0.8rem;
         font-size: 12px; } }
+    .select-wrapper select:focus {
+      background-color: #1E202E; }
   .select-wrapper::after {
     content: '';
     background-image: url("../assets/icons/down-arrow.png");
